# Construct

./: .cproject  .project  CMakeLists.txt
Common/: CMakeLists.txt  GameArguments.cpp  GameArguments.h  GameRoot.cpp  GameRoot.h  Tokenizer.cpp  Tokenizer.h  Utility.cpp  Utility.h  cmdlib.cpp  cmdlib.h  mathlib.cpp
Data/: Data.cpp  Data.h  DataBlock.cpp  DataBlock.h  DataFile.cpp  DataFile.h  Package.cpp  Package.h  PackageList.cpp  PackageList.h  TextureList.cpp  TextureList.h  WADList.cpp  WADList.h
DataReaders/: BSPReader.cpp  BSPReader.h  DataReader.cpp  DataReader.h  ReaderResult.cpp  ReaderResult.h  TGAReader.cpp  TGAReader.h  hlbsp.h  hlmiptex.h  hlwad.h
GL/: Camera.cpp  Camera.h  Console.cpp  Console.h  Font.cpp  Font.h  UserInput.cpp  UserInput.h  View.cpp  View.h  Win32Context.cpp  Win32Context.h  Win32Font.cpp  Win32Font.h  WorldRenderer.cpp  WorldRenderer.h  glad.c  keys.h
GUI/: Construct.cpp  Construct.h  ConstructKeyMap.cpp  DisplaySettings.cpp  DisplaySettings.h  TimeTicker.cpp  TimeTicker.h  main.cpp
GUI/Controls/: Button.cpp  Button.h  ComboBox.cpp  ComboBox.h  Control.cpp  Control.h  GroupBox.cpp  GroupBox.h  Label.cpp  Label.h  Window.cpp  Window.h
Math/: Color.cpp  Color.h  Frustum.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h
Textures/: StubTexture.cpp  StubTexture.h  Texture.cpp  Texture.h  TextureList.h  WADTexture.cpp  WADTexture.h  bmploader.cpp  bmploader.h  tga.h
World/: BSPEntities.cpp  BSPEntities.h  BSPFile.cpp  BSPFile.h  MDLFile.cpp  MDLFile.h  MDLFileList.h  SPRFile.cpp  SPRFile.h  SPRFileList.h  Visibility.cpp  Visibility.h  WADFile.cpp  WADFile.h  WADFileList.h  World.cpp  World.h  array.h  bsp.h  ent.h  mdl.h  spr.h  wad.h
cmake/: Dependencies.cmake
docs/: DisplaySettings.odt
include/glad/: glad.h
